fp-macros/tests/ui/invalid_assoc_type_name.stderr
error[E0405]: cannot find trait `Kind_1cbfb37e0bc08fdb` in this scope
  --> tests/ui/invalid_assoc_type_name.rs:9:1
   |
 9 | / impl_kind! {
10 | |     for MyBrand {
11 | |         type Foo<A> = Option<A>;
12 | |     }
13 | | }
   | |_^ not found in this scope
   |
   = note: this error originates in the macro `impl_kind` (in Nightly builds, run with -Z macro-backtrace for more info)
